prod db configured